--- a/.env
+++ b/.env
@@ -1,19 +1,19 @@
-SESSION_ID=""
+SESSION_ID="nector~94wxEa5K#jenvk1aXjRBgiKvkv7j1wyPA9NdGUD6U2xlmr_Pd8tE"
 AUTO_READ_STATUS=true
-STATUS_READ_MSG="*Status Seen By DRAPTER-XMD 👻🤍*"
-AUTO_STATUS_REPLY=false
-BOT_NAME="DRAPTER-XMD"
+STATUS_READ_MSG="*Status Seen By OP-XMD 👻🤍*"
+AUTO_STATUS_REPLY=true
+BOT_NAME="OP-XMD"
 MENU_IMAGE="https://files.catbox.moe/9n2k7a.jpg"
 DESCRIPTION="© ᴘᴏᴡᴇʀᴇᴅ ʙʏ ⓃⒺCⓉOR🍯"
 AUTO_REJECT_CALLS=false
 MODE="public"
 WELCOME=false
 AUTO_READ_MESSAGES=false
-AUTO_TYPING=true
-OWNER_NAME="ⓃⒺCⓉOR🍯"
-OWNER_NUMBER="254725474072"
+AUTO_TYPING=false
+OWNER_NAME="Official OnePesewa🍯"
+OWNER_NUMBER="233544482494"
 AUTO_RECORDING=false
 ALWAYS_ONLINE=true
-AUTO_BLOCK=true
+AUTO_BLOCK=false
 AUTO_REACT=false
 PREFIX="*"
